force-app/main/default/objects/Contribution__c/Contribution__c.object-meta.xml
<CustomObject>
    <label>Contribution</label>
    <nameField>
        <label>Contribution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>