force-app/main/default/objects/Contribution__c/fields/Advocacy__c.field-meta.xml
<CustomField>
    <fullName>Advocacy__c</fullName>
    <formula>IF( INCLUDES( Pillars__c , &quot;Advocacy&quot;),1,0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advocacy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>