force-app/main/default/objects/Contribution__c/fields/Assessment__c.field-meta.xml
<CustomField>
    <fullName>Assessment__c</fullName>
    <label>Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meets Expectations</fullName>
            </value>
            <value>
                <fullName>Exceeds Expectations</fullName>
            </value>
            <value>
                <fullName>Does Not Meet Expectations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>