force-app/main/default/objects/Contribution__c/fields/Expertise__c.field-meta.xml
<CustomField>
    <fullName>Expertise__c</fullName>
    <formula>IF( INCLUDES( Pillars__c , &quot;Expertise&quot;), 1, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expertise</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>