force-app/main/default/objects/Contribution__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Feedback</label>
    <referenceTo>Feedback__c</referenceTo>
    <relationshipLabel>Contributions</relationshipLabel>
    <relationshipName>Contributions</relationshipName>
    <type>Lookup</type>
</CustomField>