force-app/main/default/objects/Contribution__c/fields/Generosity__c.field-meta.xml
<CustomField>
    <fullName>Generosity__c</fullName>
    <formula>IF( INCLUDES( Pillars__c , &quot;Generosity&quot;) , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generosity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>