force-app/main/default/objects/Contribution__c/fields/Leadership__c.field-meta.xml
<CustomField>
    <fullName>Leadership__c</fullName>
    <formula>IF( INCLUDES( Pillars__c , &quot;Leadership&quot;) , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leadership</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>