force-app/main/default/objects/Contribution__c/fields/Pillars__c.field-meta.xml
<CustomField>
    <fullName>Pillars__c</fullName>
    <label>Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expertise</fullName>
            </value>
            <value>
                <fullName>Generosity</fullName>
            </value>
            <value>
                <fullName>Leadership</fullName>
            </value>
            <value>
                <fullName>Advocacy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>